<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/action_sign_in" />
            <!--<com.facebook.login.widget.LoginButton-->
                <!--android:id="@+id/facebook_login_button"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="100dp"-->
                <!--android:textStyle="bold"-->
            <!--android:background="@drawable/com_facebook_button_background"-->
                <!--android:padding="@dimen/activity_vertical_margin"-->
                <!--android:textSize="20sp"-->
                <!--android:layout_marginTop="@dimen/activity_vertical_margin"/>-->
            <Button
                android:id="@+id/facebook_login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/com_facebook_button_background"
                android:drawableLeft="@drawable/com_facebook_button_icon"
                android:text="Login with facebook"
                android:textColor="@android:color/white"
                />
            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/twitter_login_button"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="50dp" />
            <com.google.android.gms.common.SignInButton
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp" />
            <TextView
                android:id="@+id/facebookTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
