<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="vertical">
            <RelativeLayout android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="45"
                android:orientation="vertical">
            <ImageView
                android:id="@+id/register_profile_Image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/dgts__logo" />
                <ImageButton
                    android:id="@+id/button_profile_Image_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/dgts__logo" />
                </RelativeLayout>
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="0dp" android:orientation="vertical"
                android:layout_weight="55"
                android:layout_marginTop="@dimen/activity_vertical_margin">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/register_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_profile_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/register_profile_status" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/register_profile_status"
                    android:imeActionLabel="@string/action_save"
                    android:imeOptions="actionUnspecified" android:inputType="text"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/button_save"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_save"
                android:textStyle="bold" />
                </LinearLayout>
        </LinearLayout>
</LinearLayout>
